--- a/_posts/2019-05-29-test.md
+++ b/_posts/2019-05-29-test.md
@@ -1,12 +1,16 @@
 ---
+author: Nicole Liao
 layout: post
 title: test
+date: 2019-05-29
 ---
 
 
 <div class="message">
   Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
 </div>
+
+hardware acceleration is post [here](https://nicole2442.github.io/HW-acceleration/).
 
 Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. *Aenean eu leo quam.* Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
 
